<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name" 
	        android:textSize="40sp"
	        android:layout_margin="5pt"
	        />
	    
	    <Button 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10pt"        
	        android:text="@string/search"
	        android:textSize="25sp"
	        android:padding="10pt"
	        android:onClick="switchToSearch"
	        />
	    
	    <Button 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10pt"
	        android:text="@string/catalog"
	        android:textSize="25sp"
	        android:padding="10pt"
	        />
	        
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/lipsum"
			android:layout_margin="5pt"
			/>           
	
	</LinearLayout>
</ScrollView>